# axum_jwt_scaffold

./: .env  Cargo.toml  docker-compose.yml
src/: main.rs  router.rs
src/auth/: jwt_auth.rs
src/handlers/: health_handler.rs  user_handler.rs
src/models/: user.rs
src/models/user/: schema.rs
